fix metafielcd resizing and overlapping issues

--- a/packages/reaction-core-theme/theme/products/productDetail/attributes/attributes.less
+++ b/packages/reaction-core-theme/theme/products/productDetail/attributes/attributes.less
@@ -21,6 +21,8 @@
       box-shadow: none;
       border: 1px solid @border-color;
       border-right: none;
+      width: auto;
+      min-width: 0;
     }
 
     button {
